--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header") %>
+<%- include("../partials/header") %>
 <div class="container">
     <h1><%=campground.name%></h1>
     <img src="<%=campground.image%>">
@@ -10,4 +10,4 @@
     <% })%>
 </div>
 
-<%- include("partials/footer") %>
+<%- include("../partials/footer") %>
